<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QplusSDK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gotye_title_room">聊天室</string>
    <string name="gotye_title_contact">联系人</string>
    <string name="gotye_title_msgbox">消息盒</string>
    <string name="gotye_get_more">获取更多</string>
    <string name="gotye_release_to_refresh">松开刷新</string>
    <string name="gotye_pull_to_refresh">下拉刷新</string>
    <string name="gotye_refreshing">正在刷新...</string>
    <string name="gotye_updating">最近更新：</string>
    <string name="gotye_report">举报</string>
    <string name="gotye_copy">复制</string>
    <string name="gotye_male">男</string>
    <string name="gotye_female">女</string>
    <string name="gotye_notset">你猜</string>
    <string name="gotye_sure">确定</string>
    <string name="gotye_send">发送</string>
    <string name="gotye_recorder_too_short">说话时间太短</string>
    <string name="gotye_modify_loading">正在提交修改，请稍候...</string>
    <string name="gotye_report_success">举报成功</string>
    <string name="gotye_report_failed">举报失败</string>
    <string name="gotye_loading">正在加载，请稍候...</string>
    <string name="gotye_loading_more">点击加载更多</string>
    <string name="gotye_load_success">加载成功</string>
    <string name="gotye_load_failed">加载失败</string>
    <string name="gotye_load_no_more">没有更多数据</string>
    <string name="gotye_record_up">松开 发送</string>
    <string name="gotye_record_press">按住 说话</string>
    <string name="gotye_forbidden_send_tip">您已被禁言，如需恢复请与管理员联系！</string>
    <string name="gotye_back">返回</string>
    <string name="gotye_room_user_list">聊天室成员</string>
    <string name="gotye_back_to_game">回到应用</string>
    <string name="gotye_cancel">取消</string>
    <string name="gotye_pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="gotye_pull_to_refresh_release_label">放开以刷新…</string>
    <string name="gotye_pull_to_refresh_refreshing_label">正在载入…</string>

</resources>